# RETREAT

./: .gitignore  BACKEND_CODE_ANALYSIS.md  README.md  RETREAT_DESIGN_SPECIFICATION (1).md  docker-compose.yml  frontend-implementation.md  implementation-additions.md  implementation.md  main.py  pyproject.toml  retreat design.md
.cursor/plans/: retreat_app_overview_a8ed8383.plan.md
.github/workflows/: ci.yml
ai-service/: .env.example  Dockerfile  requirements.txt
ai-service/app/: config.py  main.py
ai-service/app/routers/: message.py  plan.py  replan.py
ai-service/app/schemas/: message.py  plan.py
ai-service/app/services/: composer.py  nim_client.py  planner.py
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend/src/: config.ts  index.ts  instrument.ts
backend/src/lib/: logger.ts  rapidapi.ts
backend/src/middleware/: authenticate.ts  requestLogger.ts  sentryContext.ts
backend/src/plugins/: cors.ts  redis.ts  sentry.ts  (+1 more)
frontend/: .env.local.example  instrumentation-client.ts  middleware.ts  next.config.ts  package-lock.json  package.json  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: auth-provider.tsx  layout-client.tsx  providers.tsx
frontend/hooks/: useActivities.ts  useAuth.ts  useInquiries.ts  useItineraryStream.ts  useProperties.ts  useRestaurants.ts  useTrip.ts  useWeather.ts
frontend/lib/: animations.ts  api.ts  store.ts  supabase.ts
frontend/types/: index.ts
public/: retreat-hero.webm
(+65 files in other folders)
