[project]
name = "retreat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "openai==1.35.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "sentry-sdk[fastapi]==2.4.0",
    "uvicorn[standard]==0.29.0",
]

[tool.pyright]
extraPaths = ["ai-service"]
pythonVersion = "3.12"

