[project]
name = "retreat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "openai>=1.60.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "sentry-sdk[fastapi]>=2.20.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.pyright]
extraPaths = ["ai-service"]
pythonVersion = "3.12"

